# Issues-FS__Dev__Role__Journalist

./: CNAME  README.md  ROLE.md  _config.yml  articles.md  briefs.md  corrections.md  index.md  interviews.md  investigations.md  pyproject.toml  topics.html  v0_4_0__issues-fs__journalist-role.md
.github/workflows/: ci-pipeline.yml  deploy-site.yml
.issues/: _index.json
.issues/config/: link-types.json  node-types.json
_includes/: badge.html  breadcrumbs.html  callout.html  card.html  footer.html  header.html  hero.html  metadata.html  sources.html
_layouts/: article.html  brief.html  collection.html  correction.html  home.html  interview.html  investigation.html  post-base.html
_sass/: _article.scss  _badge.scss  _breadcrumbs.scss  _card.scss  _footer-custom.scss  _hamburger.scss  _home.scss  _layouts.scss  _masthead.scss  _responsive.scss  _typography.scss  _variables.scss
articles/: feed.xml
assets/: main.scss
briefs/: feed.xml
corrections/: feed.xml
docs/: runbook__publishing-process.md
interviews/: feed.xml
investigations/: feed.xml
issues_fs_dev_role_journalist/: __init__.py
issues_fs_dev_role_journalist/utils/: Version.py
publications/: about.md  corrections-policy.md
publications/_articles/: 2026-02-09__state-of-the-ecosystem.md  2026-02-10__submodule-ecosystem-status.md  2026-02-11__31-briefs-dinis-cruz-vision.md  2026-02-11__the-great-merge.md  2026-02-18__edges-embeddings-and-correlation-engines.md
publications/_daily-briefs/: 2026-02-11__daily-brief.md
publications/_feature-requests/: 2026-02-09__github-pages-news-site.md  (+1 more)
(+23 files in other folders)
