[tool.poetry]
name        = "issues_fs_dev_role_journalist"
version     = "v0.2.5"
description = "Issues-FS__Dev__Role__Journalist"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/owasp-sbot/Issues-FS__Dev__Role__Journalist"
repository  = "https://github.com/owasp-sbot/Issues-FS__Dev__Role__Journalist"

[tool.poetry.dependencies]
python            = "^3.12"
osbot-utils       = "*"
issues-fs-cli     = "*"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"
